--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-mongo-template",
+  "name": "passport-sandbox",
   "version": "1.0.0",
   "description": "A template used as a starter application for create MERN applications",
   "main": "server.js",
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nick-ramsay/react-mongo-template.git"
+    "url": "git+https://github.com/nick-ramsay/passport-sandbox.git"
   },
   "author": "Nick Ramsay",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nick-ramsay/react-mongo-template/issues"
+    "url": "https://github.com/nick-ramsay/passport-sandbox/issues"
   },
-  "homepage": "https://github.com/nick-ramsay/react-mongo-template#readme",
+  "homepage": "https://github.com/nick-ramsay/passport-sandbox#readme",
   "dependencies": {
     "axios": "^0.27.2",
     "concurrently": "^5.3.0",
